--- a/Webpage/landing.css
+++ b/Webpage/landing.css
@@ -1,184 +1,74 @@
-body {
-  font-family: 'Helvetica';
-  color: #868e96;
+
+
+.main_body{
+
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 90%;
 }
 
-@media (min-width: 992px) {
-  body {
-    padding-top: 0;
-    padding-left: 17rem;
-  }
+.topbar{
+  width: 100%;
+  height: 15%;
+  background-color: #323046;
+
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Helvetica';
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #343a40;
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
 }
 
-h1 {
-  font-size: 6rem;
-  line-height: 5.5rem;
-}
-
-h2 {
-  font-size: 3.5rem;
-}
-
-h3 {
-  font-size: 2rem;
-}
-
-p.lead {
-  font-size: 1.15rem;
-  font-weight: 400;
-}
-
-.subheading {
-  text-transform: uppercase;
-  font-weight: 500;
-  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  font-size: 1.5rem;
-}
-
-.social-icons a {
+.dropdown {
+  position: relative;
   display: inline-block;
-  height: 3.5rem;
-  width: 3.5rem;
-  background-color: #495057;
-  color: #fff !important;
-  border-radius: 100%;
-  text-align: center;
-  font-size: 1.5rem;
-  line-height: 3.5rem;
-  margin-right: 1rem;
 }
 
-.social-icons a:last-child {
-  margin-right: 0;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
-.social-icons a:hover {
-  background-color: #BD5D38;
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
-.dev-icons {
-  font-size: 3rem;
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+
+
+
+#header{
+  background-image: url('header.JPG');
+  background-size: cover;
+  background-attachement: fixed;
+  min-height: 600px;
+  font-size:0%
 }
 
-.dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
-}
-
-.bg-primary {
-  background-color: #BD5D38 !important;
-}
-
-.text-primary {
-  color: #BD5D38 !important;
-}
-
-a {
-  color: #BD5D38;
-}
-
-a:hover, a:focus, a:active {
-  color: #824027;
 
 
-  $min-width: 120px;
-  $maincolor: #6BBE92;
-  $secondarycolor: #3E8760;
 
-  @mixin transform($value){
-    -webkit-transform: ($value);
-       -moz-transform: ($value);
-        -ms-transform: ($value);
-            transform: ($value);
-  }
-  @mixin transition($value){
-    -webkit-transition: ($value);
-       -moz-transition: ($value);
-        -ms-transition: ($value);
-            transition: ($value);
-  }
-
-  *{
-    box-sizing: border-box;
-  }
-  body{
-    font-family: 'Open Sans', sans-serif;
-    background: #374954;
-    color: white;
-    text-align: center;
-  }
-
-  #main{
-    position: relative;
-    list-style: none;
-    background: $maincolor;
-    font-weight: 400;
-    font-size: 0;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 0;
-    margin: 50px auto;
-    li{
-      font-size: 0.8rem;
-      display: inline-block;
-      position: relative;
-      padding: 15px 20px;
-      cursor: pointer;
-      z-index: 5;
-      min-width: $min-width;
+.flex-rectangle {
+       float: left;
+       margin: 0 0 0 0;
+       text-align:right;
+       width: 200%;
+       height: 20%;
+       background: #323046;
+       font-size:100%;
     }
-  }
-  li{
-    margin: 0;
-  }
-  .drop{
-      overflow: hidden;
-      list-style: none;
-      position: absolute;
-      padding: 0;
-      width: 100%;
-      left: 0;
-      top: 48px;
-      div{
-        @include transform(translate(0,-100%));
-        @include transition(all 0.5s 0.1s);
-        position: relative;
-      }
-      li{
-        display:block;
-        padding: 0;
-        width: 100%;
-        background: $secondarycolor !important;
-      }
-    }
-  #marker{
-    height: 6px;
-    background: $secondarycolor !important;
-    position: absolute;
-    bottom: 0;
-    width: $min-width;
-    z-index: 2;
-    @include transition(all 0.35s);
-  }
-
-  @for $i from 1 through 4{
-    #main li:nth-child(#{$i}){
-      &:hover ul div{
-       @include transform(translate(0,0));
-      }
-      &:hover ~ #marker{
-        @include transform(translate(#{(-1+$i)*$min-width},0));
-      }
-    }
-  }
