--- a/Webpage/assets/css/main.css
+++ b/Webpage/assets/css/main.css
@@ -1917,7 +1917,7 @@
 		input[type="button"].big,
 		button.big,
 		.button.big {
-			font-size: 1.35em;
+			font-size: 15px;
 		}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -1979,6 +1979,7 @@
 		input[type="button"].alt,
 		button.alt,
 		.button.alt {
+
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.1);
 			color: #000 !important;
